[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/levels/BaseLevel.gd" type="Script" id=1]
[ext_resource path="res://src/user_interface/hud/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/screens/transition/FadeTransition.tscn" type="PackedScene" id=4]

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 640, 640 )
scale = Vector2( 1.25, 1.25 )

[node name="FadeTransition" parent="." instance=ExtResource( 4 )]

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="InterfaceLayer" instance=ExtResource( 2 )]
visible = false

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 3 )]
visible = false

[node name="TileMaps" type="Node2D" parent="."]

[node name="ForegroundTileMap" type="TileMap" parent="TileMaps"]
scale = Vector2( 0.25, 0.25 )
cell_size = Vector2( 128, 128 )
format = 1

[node name="BackgroundTileMap" type="TileMap" parent="TileMaps"]
scale = Vector2( 0.25, 0.25 )
z_index = -2
cell_size = Vector2( 128, 128 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="Players" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="Boxes" type="Node2D" parent="Objects"]

[node name="Coins" type="Node2D" parent="Objects"]

[node name="Decorations" type="Node2D" parent="Objects"]

[node name="Flags" type="Node2D" parent="Objects"]

[node name="Platforms" type="Node2D" parent="Objects"]

[node name="Star" type="Node2D" parent="Objects"]

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
